# ELEC-5660-Project-3-Phase-1

./: .env  README.md  docker-compose.yml
docker/build-context/home-folder-config/: fixuid-config.yml
docker/latest/: Dockerfile
scripts/: kill_all_container.sh  run.sh
src/ekf/: CMakeLists.txt
src/ekf/bag/: ekf_A3.bag
src/ekf/config/: TA-camera.yml  ekf.rviz  tag_1.yml
src/ekf/launch/: A3.launch
src/ekf/src/: ekf_node.cpp
src/tag_detector/: CMakeLists.txt  package.xml
src/tag_detector/config/: camera.yml
src/tag_detector/src/: tag_detector_node.cpp
